@@ -184,5 +184,6 @@
       <img src="images/img_pulpit.jpg" alt="The Pulpit Rock" width="304" height="228">
     </figure>
     This text have <b id="b_id" class="b_class" name="b_name">some text in bold</b>
+    This text have <i id="i_id" class="i_class" name="i_name">some text in italic</i>
   </body>
 </html>
